# minishell

./: CMakeLists.txt  Makefile  a  a.out  comments  minishell  pipe_ex.c  pipes.c  x  y
SRCS/: check_work.c  child_process.c  child_process_2.c  command_execution.c  free_structures.c  get_next_line.c  get_next_line_return.c  get_next_line_utils.c  info.c  main.c  main_2.c  main_utils.c  parent_process.c  parser.c  parser_check_line.c  parser_check_line_utils.c  parser_dollar.c  parser_mem_realloc.c  parser_mem_realloc_redir.c  parser_redirects.c  parser_utils.c  pipes.c  pipes_2.c  process.c  redirects.c  shell_header.h  signals.c  structures.h
SRCS/commands/: ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_export_2.c  ft_export_3.c  ft_other_commands.c  ft_other_commands_2.c  ft_pwd.c  ft_unset.c
SRCS/env/: env.c  env_2.c  env_change.c
SRCS/old_pars/: parser_before_new.c  parser_odl_type.c  parser_previous.c  parser_previous_2.c  redirect.c  struct_pars_new.c
SRCS/pipe/: pipes.c
minishell.dSYM/Contents/Resources/DWARF/: minishell
my_libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+9 more)
